// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectStepScreen should render correctly 1`] = `
<Flex
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <ParallaxScrollView
    backgroundColor="#007398"
    backgroundScrollSpeed={5}
    contentBackgroundColor="#fff"
    contentContainerStyle={null}
    fadeOutForeground={true}
    onChangeHeaderVisibility={[Function]}
    outputScaleValue={5}
    parallaxHeaderHeight={215}
    renderBackground={[Function]}
    renderForeground={[Function]}
    renderParallaxHeader={[Function]}
    renderScrollComponent={[Function]}
    renderStickyHeader={[Function]}
    stickyHeaderHeight={65}
  >
    <StepsList
      createStepText="Create your own step..."
      items={Array []}
      loadMoreStepsText="SHOW MORE STEPS"
      onCreateStep={[Function]}
      onLoadMoreSteps={[Function]}
      onSelectStep={[Function]}
    />
  </ParallaxScrollView>
</Flex>
`;

exports[`SelectStepScreen should render foreground header correctly 1`] = `
<View
  style={
    Array [
      Object {},
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
    ]
  }
>
  <Flex
    align="center"
    justify="center"
    value={1.5}
  >
    <MyText
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#52C5DC",
          "fontSize": 36,
        }
      }
      type="header"
    >
      Steps of Faith
    </MyText>
    <MyText
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "backgroundColor": "rgba(0,0,0,0)",
          "color": "#ffffff",
          "fontSize": 16,
          "lineHeight": 24,
          "paddingHorizontal": 50,
          "paddingVertical": 20,
          "textAlign": "center",
        }
      }
    />
  </Flex>
</View>
`;

exports[`SelectStepScreen should render sticky header correctly 1`] = `
<View
  style={
    Array [
      Object {
        "height": "100%",
        "paddingTop": 0,
      },
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
    ]
  }
>
  <MyText
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#ffffff",
        "fontSize": 14,
      }
    }
  >
    STEPS OF FAITH
  </MyText>
</View>
`;

exports[`renderBackButton should render back button 1`] = `
<Flex
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <ParallaxScrollView
    backgroundColor="#007398"
    backgroundScrollSpeed={5}
    contentBackgroundColor="#fff"
    contentContainerStyle={null}
    fadeOutForeground={true}
    onChangeHeaderVisibility={[Function]}
    outputScaleValue={5}
    parallaxHeaderHeight={215}
    renderBackground={[Function]}
    renderForeground={[Function]}
    renderParallaxHeader={[Function]}
    renderScrollComponent={[Function]}
    renderStickyHeader={[Function]}
    stickyHeaderHeight={65}
  >
    <StepsList
      createStepText="Create your own step..."
      items={
        Array [
          Object {
            "id": "1",
            "selected": false,
          },
        ]
      }
      loadMoreStepsText="SHOW MORE STEPS"
      onCreateStep={[Function]}
      onLoadMoreSteps={[Function]}
      onSelectStep={[Function]}
    />
  </ParallaxScrollView>
  <Connect(BackButton)
    absolute={true}
    customNavigate={[Function]}
  />
</Flex>
`;

exports[`renderSaveButton should not render save button 1`] = `
<Flex
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <ParallaxScrollView
    backgroundColor="#007398"
    backgroundScrollSpeed={5}
    contentBackgroundColor="#fff"
    contentContainerStyle={null}
    fadeOutForeground={true}
    onChangeHeaderVisibility={[Function]}
    outputScaleValue={5}
    parallaxHeaderHeight={215}
    renderBackground={[Function]}
    renderForeground={[Function]}
    renderParallaxHeader={[Function]}
    renderScrollComponent={[Function]}
    renderStickyHeader={[Function]}
    stickyHeaderHeight={65}
  >
    <StepsList
      createStepText="Create your own step..."
      items={
        Array [
          Object {
            "id": "1",
            "selected": false,
          },
        ]
      }
      loadMoreStepsText="SHOW MORE STEPS"
      onCreateStep={[Function]}
      onLoadMoreSteps={[Function]}
      onSelectStep={[Function]}
    />
  </ParallaxScrollView>
</Flex>
`;

exports[`renderSaveButton should render save button 1`] = `
<Flex
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <ParallaxScrollView
    backgroundColor="#007398"
    backgroundScrollSpeed={5}
    contentBackgroundColor="#fff"
    contentContainerStyle={null}
    fadeOutForeground={true}
    onChangeHeaderVisibility={[Function]}
    outputScaleValue={5}
    parallaxHeaderHeight={215}
    renderBackground={[Function]}
    renderForeground={[Function]}
    renderParallaxHeader={[Function]}
    renderScrollComponent={[Function]}
    renderStickyHeader={[Function]}
    stickyHeaderHeight={65}
  >
    <StepsList
      createStepText="Create your own step..."
      items={
        Array [
          Object {
            "id": "1",
            "selected": true,
          },
        ]
      }
      loadMoreStepsText="SHOW MORE STEPS"
      onCreateStep={[Function]}
      onLoadMoreSteps={[Function]}
      onSelectStep={[Function]}
    />
  </ParallaxScrollView>
  <Flex
    align="center"
    justify="end"
  >
    <Button
      onPress={[Function]}
      style={
        Object {
          "width": 750,
        }
      }
      text="ADD TO MY STEPS"
      type="secondary"
    />
  </Flex>
</Flex>
`;
